<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ozaydin.serkan.com.image_zoom_view.ImageViewZoom
                android:id="@+id/imgvPoster"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/placeholder_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/clpPoster"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imgvPoster"
                app:layout_constraintEnd_toEndOf="@+id/imgvPoster"
                app:layout_constraintStart_toStartOf="@+id/imgvPoster"
                app:layout_constraintTop_toTopOf="@+id/imgvPoster" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/txtvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/titleMovie"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textPopularity"
                style="@style/subTitleBoldMovie"/>
            <TextView
                android:id="@+id/txtvPopularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/subTitleMovie"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textReleaseDate"
                style="@style/subTitleBoldMovie"/>
            <TextView
                android:id="@+id/txtvReleaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/subTitleMovie"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textVoteAverage"
                style="@style/subTitleBoldMovie"/>
            <TextView
                android:id="@+id/txtvVoteAverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/subTitleMovie"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textVideosAvailable"
            style="@style/subTitleBoldMovie"/>

        <TextView
            android:id="@+id/txtvEmptyData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/textEmptyData"
            android:layout_marginTop="@dimen/_8sdp"
            android:textAlignment="center"
            style="@style/subTitleMovie"
            android:visibility="gone"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTryAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTryAgain"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vprVideosMovie"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_170sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/clpVideos"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/vprVideosMovie"
                app:layout_constraintEnd_toEndOf="@+id/vprVideosMovie"
                app:layout_constraintStart_toStartOf="@+id/vprVideosMovie"
                app:layout_constraintTop_toTopOf="@+id/vprVideosMovie" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/wdiIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:visibility="gone"
            app:dotsColor="@color/purple_200"
            app:dotsCornerRadius="8dp"
            app:dotsSize="12dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:selectedDotColor="@color/teal_200"
            app:progressMode="true" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textVoteCount"
                style="@style/subTitleBoldMovie"/>
            <TextView
                android:id="@+id/txtvVoteCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/subTitleMovie"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/textOverview"
            style="@style/subTitleBoldMovie"/>
        <TextView
            android:id="@+id/txtvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            style="@style/descriptionMovie"/>
    </LinearLayout>
</ScrollView>